--- a/ContactsJSON.csproj
+++ b/ContactsJSON.csproj
@@ -165,6 +165,7 @@
     <None Include="packages.config" />
     <Content Include="Views\Contacts\ContactForm.cshtml" />
     <Content Include="Views\Contacts\GetContacts.cshtml" />
+    <Content Include="Views\Contacts\GetContactsTownsList.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
